# lim_term

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  i18n_implementation_plan.md  lim_serial.py  limterm.spec  mock_serial.py  pyproject.toml  tkinter_serial_gui.py
.github/workflows/: build-multi-platform.yml  build-windows.yml
dev-tools/: format_yaml_files.py  refactor_analysis.md  strip_comments.py  sync_languages.py  validate_languages.py
docs/: README_de.md  README_en.md  README_es.md  README_fr.md  README_pt-br.md
languages/: de.yml  en.yml  es.yml  fr.yml  pt-br.yml
lim_captures/: data_capture_20250811_232921.txt
lim_serial/: __init__.py  config.py
lim_serial/core/: __init__.py  graph_manager.py  serial_manager.py
lim_serial/gui/: __init__.py  config_tab.py  data_tab.py  graph_options.py  graph_tab.py  graph_tab_plotter.py  graph_tab_settings.py  graph_tab_widgets.py  main_window.py
lim_serial/i18n/: __init__.py  config_manager.py  language_manager.py
lim_serial/utils/: __init__.py  file_utils.py  mock_serial.py  serial_utils.py
limterm/: __init__.py  config.py  main.py  matplotlib_optimizations.py
limterm/core/: __init__.py  graph_manager.py  serial_manager.py
limterm/gui/: __init__.py  config_tab.py  data_tab.py  graph_options.py  graph_tab.py  main_window.py  osc_plotter.py  osc_tab.py  osc_trigger.py  preference_widgets.py
limterm/i18n/: __init__.py  config_manager.py  language_manager.py
limterm/languages/: de.yml  en.yml  es.yml  fr.yml  pt-br.yml
limterm/utils/: __init__.py  file_utils.py  paths.py  (+7 more)
(+20 files in other folders)
